--- a/V-E.html
+++ b/V-E.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.8"/>
-<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting/Abc cube.svg"> 
+<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting-e-ss/Abc cube.svg"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@ text-shadow:1px 1px 3px black;
 .header{
 width:100%;
 height:120px;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/subtle-prism.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/subtle-prism.svg");
 background-attachment:fixed;
 
 border-bottom-left-radius:10%;
@@ -219,7 +219,7 @@ border-color:#f3eced;
 /*footer:*/
 .footer{
 width:100%;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/Meteor.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/Meteor.svg");
 Background-attachment:fixed;
 position:absolute;
 min-height:9%;
@@ -249,7 +249,7 @@ padding-right:3px;
 </head>
 <body> 
 <div class="header">
-<img src="https://alsaha-alelmiya.github.io/Hosting/الساحة العلمية.png" alt="" class="h-logo" align="left">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" class="h-logo" align="left">
 <p class="index">
 مفردات وتعبيرات منهج اللغة الإنجليزية، للصف الأول ثانوي، الفصل الدراسي الثاني
 </p>
@@ -272,7 +272,7 @@ padding-right:3px;
 </div>
 
 <div class="impo-n" id="impo-n">
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important.svg" alt="" class="impo-img">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Important.svg" alt="" class="impo-img">
 تنويه!
 <br>
 قد لا يدعم تصميم الصفحات الإلكترونية شاشتك.
