--- a/V-E2.html
+++ b/V-E2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.65"/>
-<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting/Abc cube.svg"> 
+<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting-e-ss/Abc cube.svg"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -183,7 +183,7 @@ text-shadow:1px 1px 3px #f3eced, 1px 1px 3px #f3eced;
 .header{
 width:100%;
 height:140px;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/sun-tornado2.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/sun-tornado2.svg");
 background-attachment:fixed;
 border-bottom-left-radius:15%;
 border-bottom-right-radius:15%;
@@ -256,7 +256,7 @@ text-align:center;
 /*footer:*/
 .footer{
 width:100%;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/vortex2.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/vortex2.svg");
 Background-attachment:fixed;
 position:absolute;
 min-height:7%;
@@ -297,7 +297,7 @@ to{transform:rotate(-90deg); opacity:0;}
 </head>
 <body>
 <div class="header">
-<img src="https://alsaha-alelmiya.github.io/Hosting/الساحة العلمية.png" alt="" class="h-logo" align="left">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" class="h-logo" align="left">
 <p class="index">
 مفردات وتعبيرات الوحدة الثانية (خذ بنصيحتي)
 <br>
@@ -306,14 +306,14 @@ Unit2 (Take My Advice) Vocabularies And Expressions
 </span>
 </p>
 <button onclick="openMenu()" class="m-button">
-<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting/menu2.svg" alt="Menu">
+<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting-e-ss/menu2.svg" alt="Menu">
 </button>
 </div>
 
 <div class="menu-box" id="menu-box">
 <a href="javascript:void(0)" class="c-link" onclick="closeMenu()" class="m-link">
 <button class="c-button">
-<img src="https://alsaha-alelmiya.github.io/Hosting/cross2.svg" alt="Close" class="c-img" id="c-img">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/cross2.svg" alt="Close" class="c-img" id="c-img">
 </button>
 </a>
 <br><br><br><br><br><br>
@@ -547,7 +547,7 @@ Three-word verbs
 <button onclick="$2wv1.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Give up
 <button class="dic-btn" id="dic-btn1">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -561,7 +561,7 @@ Give up
 <button onclick="$3wv1.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Cut down on
 <button class="dic-btn" id="dic-btn2">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
@@ -572,7 +572,7 @@ Cut down on
 <button onclick="$2wv2.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Put off
 <button class="dic-btn" id="dic-btn3">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -586,7 +586,7 @@ Put off
 <button onclick="$3wv2.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Get along with
 <button class="dic-btn" id="dic-btn4">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
@@ -597,7 +597,7 @@ Get along with
 <button onclick="$2wv3.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Take up
 <button class="dic-btn" id="dic-btn5">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -611,7 +611,7 @@ Take up
 <button onclick="$3wv3.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Put up with
 <button class="dic-btn" id="dic-btn6">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
@@ -622,7 +622,7 @@ Put up with
 <button onclick="$2wv4.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Throw away
 <button class="dic-btn" id="dic-btn7">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -642,7 +642,7 @@ Adjectives
 <button onclick="$2wv5.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Turn down
 <button class="dic-btn" id="dic-btn8">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -691,7 +691,7 @@ Depressed
 <button onclick="rt1.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Feeling down
 <button class="dic-btn" id="dic-btn9">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -711,7 +711,7 @@ illegal
 <button onclick="rt2.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 Look out for myself
 <button class="dic-btn" id="dic-btn10">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -731,7 +731,7 @@ Lean
 <button onclick="rt3.play()" class="speaker-btn"><img src="https://good-web-dev.github.io/hosting/Speaker2.svg" alt="🔊" class="speaker"></button>
 To be honest
 <button class="dic-btn" id="dic-btn11">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary2.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary2.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -774,7 +774,7 @@ Slim
 </p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/voices2.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/voices2.js"></script>
 <script>
 function openMenu(){
 document.getElementById("m-img").style.animation ="m-img 0.9s";
@@ -795,6 +795,6 @@ document.getElementById("menu-box").style.width = "0";
 document.getElementById("m-img").style.display ="block";
 }
 </script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/dic-sup.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dic-sup.js"></script>
 </body>
 </html>
