--- a/V-E3.html
+++ b/V-E3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.65"/>
-<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting/Abc cube.svg"> 
+<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting-e-ss/Abc cube.svg"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -184,7 +184,7 @@ text-shadow:1px 1px 3px #f3eced, 1px 1px 3px #f3eced;
 .header{
 width:100%;
 height:140px;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/sun-tornado3.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/sun-tornado3.svg");
 background-attachment:fixed;
 border-bottom-left-radius:15%;
 border-bottom-right-radius:15%;
@@ -257,7 +257,7 @@ text-align:center;
 /*footer:*/
 .footer{
 width:100%;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/vortex3.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/vortex3.svg");
 Background-attachment:fixed;
 position:absolute;
 min-height:9%;
@@ -298,7 +298,7 @@ to{transform:rotate(-90deg); opacity:0;}
 </head>
 <body>
 <div class="header">
-<img src="https://alsaha-alelmiya.github.io/Hosting/الساحة العلمية.png" alt="" class="h-logo" align="left">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" class="h-logo" align="left">
 <p class="index">
 مفردات وتعبيرات الوحدة الثالثة (وصلك بريد!)
 <br>
@@ -307,14 +307,14 @@ Unit3 (You've Got Mail!) Vocabularies And Expressions
 </span>
 </p>
 <button onclick="openMenu()" class="m-button">
-<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting/menu3.svg" alt="Menu">
+<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting-e-ss/menu3.svg" alt="Menu">
 </button>
 </div>
 
 <div class="menu-box" id="menu-box">
 <a href="javascript:void(0)" class="c-link" onclick="closeMenu()" class="m-link">
 <button class="c-button">
-<img src="https://alsaha-alelmiya.github.io/Hosting/cross3.svg" alt="Close" class="c-img" id="c-img">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/cross3.svg" alt="Close" class="c-img" id="c-img">
 </button>
 </a>
 <br><br><br><br><br><br>
@@ -351,13 +351,13 @@ Verbs
 <td class="items ar-i">
 توضيح - إثبات
 </td>
-<td class="items en-i"><button onclick="n1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Demonstration
 </td>
 <td class="items ar-i">
 يعتذر
 </td>
-<td class="items en-i"><button onclick="v1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Apologize
 </td>
 </tr>
@@ -366,13 +366,13 @@ Apologize
 <td class="items ar-i">
 تمويل
 </td>
-<td class="items en-i"><button onclick="n2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Funding
 </td>
 <td class="items ar-i">
 يتصل
 </td>
-<td class="items en-i"><button onclick="v2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Contact
 </td>
 </tr>
@@ -381,13 +381,13 @@ Contact
 <td class="items ar-i">
 بريد مهمل
 </td>
-<td class="items en-i"><button onclick="n3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Junk mail
 </td>
 <td class="items ar-i">
 يرسل شيئًا
 </td>
-<td class="items en-i"><button onclick="v3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Dispatch
 </td>
 </tr>
@@ -396,13 +396,13 @@ Dispatch
 <td class="items ar-i">
 رسالة عشوائية
 </td>
-<td class="items en-i"><button onclick="n4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Spam
 </td>
 <td class="items ar-i">
 يستورد
 </td>
-<td class="items en-i"><button onclick="v4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Import
 </td>
 </tr>
@@ -411,13 +411,13 @@ Import
 <td class="items ar-i">
 تواصل
 </td>
-<td class="items en-i"><button onclick="n5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Supplier
 </td>
 <td class="items ar-i">
 ينزعج
 </td>
-<td class="items en-i"><button onclick="v5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Inconvenience
 </td>
 </tr>
@@ -426,13 +426,13 @@ Inconvenience
 <td class="items ar-i">
 ترتيبات الرحلة
 </td>
-<td class="items en-i"><button onclick="n6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Travel arrangements
 </td>
 <td class="items ar-i">
 يتساءل - يندهش
 </td>
-<td class="items en-i"><button onclick="v6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Wonder
 </td>
 </tr>
@@ -456,13 +456,13 @@ Adjectives
 <td class="items ar-i">
 يعطي شخصًا ما مكانًا للإقامة مؤقتًا
 </td>
-<td class="items en-i"><button onclick="$2wv1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="$2wv1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Put up
 </td>
 <td class="items ar-i">
 قابل للتنفيذ
 </td>
-<td class="items en-i"><button onclick="adj1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Feasible
 </td>
 </tr>
@@ -477,7 +477,7 @@ Conjunctions
 <td class="items ar-i">
 مبتل كليًّا
 </td>
-<td class="items en-i"><button onclick="adj2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Soaked
 </td>
 </tr>
@@ -486,13 +486,13 @@ Soaked
 <td class="items ar-i">
 بالرغم من
 </td>
-<td class="items en-i"><button onclick="con1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="con1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Although
 </td>
 <td class="items ar-i">
 طارئ
 </td>
-<td class="items en-i"><button onclick="adj3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Urgent
 </td>
 </tr>
@@ -501,7 +501,7 @@ Urgent
 <td class="items ar-i">
 ما إن
 </td>
-<td class="items en-i"><button onclick="con2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="con2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 As soon as
 </td>
 <td class="s-titles ar-st">
@@ -516,13 +516,13 @@ Adverbs
 <td class="items ar-i">
 على الرغم من
 </td>
-<td class="items en-i"><button onclick="con3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="con3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Even though
 </td>
 <td class="items ar-i">
 حاليًّا
 </td>
-<td class="items en-i"><button onclick="adv1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adv1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Currently
 </td>
 </tr>
@@ -531,13 +531,13 @@ Currently
 <td class="items ar-i">
 على الرغم من
 </td>
-<td class="items en-i"><button onclick="con4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="con4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 In spite of
 </td>
 <td class="items ar-i">
 بلا اكتراث
 </td>
-<td class="items en-i"><button onclick="adv2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adv2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Indifferently
 </td>
 </tr>
@@ -550,12 +550,12 @@ Indifferently
 
 <tr>
 <td class="s-titles ar-st">
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important3.svg" alt="" class="impo">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Important3.svg" alt="" class="impo">
 حديث جاد
 </td>
 <td class="s-titles en-st">
 Real Talk
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important3.svg" alt="" class="impo">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Important3.svg" alt="" class="impo">
 </td>
 <td class="s-titles ar-st">
 مصطلحات
@@ -571,16 +571,16 @@ Idioms
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m1">Be straight = be honest and frank.</div>
-<button onclick="rt1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Be straight
 <button class="dic-btn" id="dic-btn1">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary3.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary3.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
 كن على الطريق
 </td>
-<td class="items en-i"><button onclick="idi1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Be on the road
 </td>
 </tr>
@@ -591,16 +591,16 @@ Be on the road
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m2">Let someone down = disappoint.</div>
-<button onclick="rt2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Let someone down
 <button class="dic-btn" id="dic-btn2">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary3.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary3.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
 اعتاد على
 </td>
-<td class="items en-i"><button onclick="idi2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Get used to
 </td>
 </tr>
@@ -611,16 +611,16 @@ Get used to
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m3">No way = used to say you won't allow something.</div>
-<button onclick="rt3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 No way
 <button class="dic-btn" id="dic-btn3">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary3.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary3.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
 يتطلع إلى
 </td>
-<td class="items en-i"><button onclick="idi3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Look forward to
 </td>
 </tr>
@@ -631,16 +631,16 @@ Look forward to
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m4">Of course = used to give someone permission or encouragement.</div>
-<button onclick="rt4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Of course
 <button class="dic-btn" id="dic-btn4">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary3.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary3.svg" alt="📖" class="dictionary">
 </button>
 </td>
 <td class="items ar-i">
 يوقف التفكير
 </td>
-<td class="items en-i"><button onclick="idi4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Out of mind
 </td>
 </tr>
@@ -655,7 +655,7 @@ Ending a business letter or email
 <td class="items ar-i">
 خارج نطاق الرؤية
 </td>
-<td class="items en-i"><button onclick="idi5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Out of sight
 </td>
 </tr>
@@ -664,13 +664,13 @@ Out of sight
 <td class="items ar-i">
 أطيب التحيات
 </td>
-<td class="items en-i"><button onclick="elom1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="elom1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Best regards
 </td>
 <td class="items ar-i">
 يتسلل خارجًا
 </td>
-<td class="items en-i"><button onclick="idi6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Sneak out
 </td>
 </tr>
@@ -680,7 +680,7 @@ Sneak out
 <td class="items ar-i">
 يستفيد من
 </td>
-<td class="items en-i"><button onclick="idi7.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker3.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi7.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker3.svg" alt="🔊" class="speaker"></button>
 Take advantage of
 </td>
 </tr>
@@ -697,7 +697,7 @@ Take advantage of
 </p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/voices3.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/voices3.js"></script>
 <script>
 function openMenu(){
 document.getElementById("m-img").style.animation ="m-img 0.9s";
@@ -718,6 +718,6 @@ document.getElementById("menu-box").style.width = "0";
 document.getElementById("m-img").style.display ="block";
 }
 </script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/dic-sup.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dic-sup.js"></script>
 </body>
 </html>
