--- a/V-E4.html
+++ b/V-E4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.65"/>
-<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting/Abc cube.svg"> 
+<link rel="icon" href="https://alsaha-alelmiya.github.io/Hosting-e-ss/Abc cube.svg"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +44,7 @@ position:relative;
 body::after{
 content:'';
 display:block;
-min-height: 10%;
+min-height: 9.5%;
 }
 
 ::selection{
@@ -184,7 +184,7 @@ text-shadow:1px 1px 3px #f3eced, 1px 1px 3px #f3eced;
 .header{
 width:100%;
 height:140px;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/sun-tornado4.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/sun-tornado4.svg");
 background-attachment:fixed;
 border-bottom-left-radius:15%;
 border-bottom-right-radius:15%;
@@ -257,10 +257,10 @@ text-align:center;
 /*footer:*/
 .footer{
 width:100%;
-background-image:url("https://alsaha-alelmiya.github.io/Hosting/vortex4.svg");
+background-image:url("https://alsaha-alelmiya.github.io/Hosting-e-ss/vortex4.svg");
 Background-attachment:fixed;
 position:absolute;
-min-height:10%;
+min-height:9.5%;
 bottom:0;
 z-index:-1;
 border-top-left-radius:15%;
@@ -298,7 +298,7 @@ to{transform:rotate(-90deg); opacity:0;}
 </head>
 <body>
 <div class="header">
-<img src="https://alsaha-alelmiya.github.io/Hosting/الساحة العلمية.png" alt="" class="h-logo" align="left">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" class="h-logo" align="left">
 <p class="index">
 مفردات وتعبيرات الوحدة الرابعة (تفكير رغبوي)
 <br>
@@ -307,14 +307,14 @@ Unit4 (Wishful Thinking) Vocabularies And Expressions
 </span>
 </p>
 <button onclick="openMenu()" class="m-button">
-<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting/menu4.svg" alt="Menu">
+<img class="m-img" id="m-img" src="https://alsaha-alelmiya.github.io/Hosting-e-ss/menu4.svg" alt="Menu">
 </button>
 </div>
 
 <div class="menu-box" id="menu-box">
 <a href="javascript:void(0)" class="c-link" onclick="closeMenu()" class="m-link">
 <button class="c-button">
-<img src="https://alsaha-alelmiya.github.io/Hosting/cross4.svg" alt="Close" class="c-img" id="c-img">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/cross4.svg" alt="Close" class="c-img" id="c-img">
 </button>
 </a>
 <br><br><br><br><br><br>
@@ -351,13 +351,13 @@ Verbs
 <td class="items ar-i">
 مقدار
 </td>
-<td class="items en-i"><button onclick="n1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Amount
 </td>
 <td class="items ar-i">
 يمنح
 </td>
-<td class="items en-i"><button onclick="v1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Award
 </td>
 </tr>
@@ -366,13 +366,13 @@ Award
 <td class="items ar-i">
 منفعة
 </td>
-<td class="items en-i"><button onclick="n2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Benefit
 </td>
 <td class="items ar-i">
 يفيد
 </td>
-<td class="items en-i"><button onclick="v2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Benefit
 </td>
 </tr>
@@ -381,13 +381,13 @@ Benefit
 <td class="items ar-i">
 سيولة نقدية
 </td>
-<td class="items en-i"><button onclick="n3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Cash
 </td>
 <td class="items ar-i">
 يقسم
 </td>
-<td class="items en-i"><button onclick="v3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Divide
 </td>
 </tr>
@@ -396,13 +396,13 @@ Divide
 <td class="items ar-i">
 عمل خيري
 </td>
-<td class="items en-i"><button onclick="n4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Charity
 </td>
 <td class="items ar-i">
 يستثمر
 </td>
-<td class="items en-i"><button onclick="v4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Invest
 </td>
 </tr>
@@ -411,13 +411,13 @@ Invest
 <td class="items ar-i">
 جزيرة قاحلة
 </td>
-<td class="items en-i"><button onclick="n5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Desert island
 </td>
 <td class="items ar-i">
 يجزئ
 </td>
-<td class="items en-i"><button onclick="v5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v5.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Spilt
 </td>
 </tr>
@@ -426,13 +426,13 @@ Spilt
 <td class="items ar-i">
 إمبراطورية
 </td>
-<td class="items en-i"><button onclick="n6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Empire
 </td>
 <td class="items ar-i">
 يتمنى
 </td>
-<td class="items en-i"><button onclick="v6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="v6.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Wish
 </td>
 </tr>
@@ -441,7 +441,7 @@ Wish
 <td class="items ar-i">
 مواجهة
 </td>
-<td class="items en-i"><button onclick="n7.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n7.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Encounter
 </td>
 <td class="s-titles ar-st">
@@ -456,13 +456,13 @@ Adjectives
 <td class="items ar-i">
 خارج الأرض
 </td>
-<td class="items en-i"><button onclick="n8.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n8.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Extraterrestrial
 </td>
 <td class="items ar-i">
 مغلق
 </td>
-<td class="items en-i"><button onclick="adj1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Close
 </td>
 </tr>
@@ -471,13 +471,13 @@ Close
 <td class="items ar-i">
 قائد
 </td>
-<td class="items en-i"><button onclick="n9.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n9.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Leader
 </td>
 <td class="items ar-i">
 مكتوب بخط اليد
 </td>
-<td class="items en-i"><button onclick="adj2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Handwritten
 </td>
 </tr>
@@ -486,13 +486,13 @@ Handwritten
 <td class="items ar-i">
 مكرَّم
 </td>
-<td class="items en-i"><button onclick="n10.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n10.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Laureate
 </td>
 <td class="items ar-i">
 تاريخي
 </td>
-<td class="items en-i"><button onclick="adj3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Historical
 </td>
 </tr>
@@ -501,13 +501,13 @@ Historical
 <td class="items ar-i">
 البشرية
 </td>
-<td class="items en-i"><button onclick="n11.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n11.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Mankind
 </td>
 <td class="items ar-i">
 وحيد
 </td>
-<td class="items en-i"><button onclick="adj4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="adj4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Lonely
 </td>
 </tr>
@@ -516,7 +516,7 @@ Lonely
 <td class="items ar-i">
 محب للخير
 </td>
-<td class="items en-i"><button onclick="n12.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n12.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Philanthropist
 </td>
 <th colspan="2" class="m-titles">
@@ -528,16 +528,16 @@ Philanthropist
 <td class="items ar-i">
 جائزة
 </td>
-<td class="items en-i"><button onclick="n13.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n13.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Prize
 </td>
 <td class="s-titles ar-st">
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important4.svg" alt="" class="impo">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Important4.svg" alt="" class="impo">
 حديث جاد
 </td>
 <td class="s-titles en-st">
 Real Talk
-<img src="https://alsaha-alelmiya.github.io/Hosting/Important4.svg" alt="" class="impo">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Important4.svg" alt="" class="impo">
 </td>
 </tr>
 
@@ -545,7 +545,7 @@ Real Talk
 <td class="items ar-i">
 مسابقة
 </td>
-<td class="items en-i"><button onclick="n14.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n14.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Quiz show
 </td>
 <td class="items ar-i">
@@ -553,10 +553,10 @@ Quiz show
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m1">Have a ball = have a good time.</div>
-<button onclick="rt1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Have a ball
 <button class="dic-btn" id="dic-btn1">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary4.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary4.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -565,7 +565,7 @@ Have a ball
 <td class="items ar-i">
 البورصة (سوق الأسهم)
 </td>
-<td class="items en-i"><button onclick="n15.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n15.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Stock market
 </td>
 <td class="items ar-i">
@@ -573,10 +573,10 @@ Stock market
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m2">This guy = informal way to say “this person”.</div>
-<button onclick="rt2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt2.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 This guy
 <button class="dic-btn" id="dic-btn2">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary4.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary4.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -585,7 +585,7 @@ This guy
 <td class="items ar-i">
 تقنية
 </td>
-<td class="items en-i"><button onclick="n16.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n16.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Technology
 </td>
 <td class="items ar-i">
@@ -593,10 +593,10 @@ Technology
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m3">To me = in my opinion.</div>
-<button onclick="rt3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt3.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 To me
 <button class="dic-btn" id="dic-btn3">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary4.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary4.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -605,7 +605,7 @@ To me
 <td class="items ar-i">
 الكون
 </td>
-<td class="items en-i"><button onclick="n17.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n17.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Universe
 </td>
 <td class="items ar-i">
@@ -613,10 +613,10 @@ Universe
 </td>
 <td class="items en-i">
 <div class="dic-m" id="dic-m4">You wouldn't know = echo question, to confirm what was said or to show disbelief.</div>
-<button onclick="rt4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<button onclick="rt4.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 You wouldn't know
 <button class="dic-btn" id="dic-btn4">
-<img src="https://alsaha-alelmiya.github.io/Hosting/dictionary4.svg" alt="📖" class="dictionary">
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dictionary4.svg" alt="📖" class="dictionary">
 </button>
 </td>
 </tr>
@@ -625,7 +625,7 @@ You wouldn't know
 <td class="items ar-i">
 أمنية
 </td>
-<td class="items en-i"><button onclick="n18.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="n18.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Wish
 </td>
 <td class="s-titles ar-st">
@@ -641,7 +641,7 @@ Idiom
 <td class="items ar-i">
 ابقَ على تواصل
 </td>
-<td class="items en-i"><button onclick="idi1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting/Speaker4.svg" alt="🔊" class="speaker"></button>
+<td class="items en-i"><button onclick="idi1.play()" class="speaker-btn"><img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/Speaker4.svg" alt="🔊" class="speaker"></button>
 Keep in touch
 </td>
 </tr>
@@ -657,7 +657,7 @@ Keep in touch
 </p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/voices4.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/voices4.js"></script>
 <script>
 function openMenu(){
 document.getElementById("m-img").style.animation ="m-img 0.9s";
@@ -678,6 +678,6 @@ document.getElementById("menu-box").style.width = "0";
 document.getElementById("m-img").style.display ="block";
 }
 </script>
-<script src="https://alsaha-alelmiya.github.io/Hosting/dic-sup.js"></script>
+<script src="https://alsaha-alelmiya.github.io/Hosting-e-ss/dic-sup.js"></script>
 </body>
 </html>
